tests/ui/traits/next-solver/stall-num-var-auto-trait.fallback.stderr
error[E0277]: the trait bound `i32: Foo` is not satisfied
  --> $DIR/stall-num-var-auto-trait.rs:18:15
   |
LL |     needs_foo(x);
   |     --------- ^ the trait `Foo` is not implemented for `i32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_foo`
  --> $DIR/stall-num-var-auto-trait.rs:14:22
   |
LL | fn needs_foo(x: impl Foo) {}
   |                      ^^^ required by this bound in `needs_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
